Mahapallegama/Urumewalla Leecom Stations were added

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -27,8 +27,8 @@
     },
     {
       "stationId": "curw_mahapallegama",
-      "name": "Mahapallegama",
-      "station_meta": ["curw_mahapallegama", "Mahapallegama", 7.169737, 80.258512, 0, "Mahapallegama station with standard Gauge"],
+      "name": "Mahapallegama Study",
+      "station_meta": ["curw_mahapallegama", "Mahapallegama Study", 7.169737, 80.258512, 0, "Mahapallegama station with standard Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Temperature", "Tick"],
@@ -66,8 +66,8 @@
     },
     {
       "stationId": "curw_waga",
-      "name": "Waga",
-      "station_meta": ["curw_waga", "Waga", 6.906780, 80.118275, 0, "Waga Station"],
+      "name": "Waga Study",
+      "station_meta": ["curw_waga", "Waga Study", 6.906780, 80.118275, 0, "Waga Station"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Tick"],
@@ -79,8 +79,8 @@
     },
     {
       "stationId": "curw_mutwal",
-      "name": "Mutwal",
-      "station_meta": ["curw_mutwal", "Mutwal", 6.95871 , 79.86090, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "name": "Mutwal Study",
+      "station_meta": ["curw_mutwal", "Mutwal Study", 6.95871 , 79.86090, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Tick"],
@@ -92,8 +92,8 @@
     },
     {
       "stationId": "curw_malabe",
-      "name": "Malabe",
-      "station_meta": ["curw_malabe", "Malabe", 6.90396 , 79.95738, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "name": "Malabe Study",
+      "station_meta": ["curw_malabe", "Malabe Study", 6.90396 , 79.95738, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Tick"],
@@ -131,8 +131,8 @@
     },
     {
       "stationId": "curw_mulleriyawa",
-      "name": "Mulleriyawa",
-      "station_meta": ["curw_mulleriyawa", "Mulleriyawa", 6.923571, 79.941176, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "name": "Mulleriyawa Study",
+      "station_meta": ["curw_mulleriyawa", "Mulleriyawa Study", 6.923571, 79.941176, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Tick"],
@@ -144,8 +144,8 @@
     },
     {
       "stationId": "curw_attidiya",
-      "name": "Attidiya",
-      "station_meta": ["curw_attidiya", "Attidiya", 6.8458199, 79.8829689, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "name": "Attidiya Study",
+      "station_meta": ["curw_attidiya", "Attidiya Study", 6.8458199, 79.8829689, 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Tick"],
@@ -315,6 +315,32 @@
       "max_values": ["120", "40", "30", "360", "100", "1"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Rathana Kanishta Vidyalaya Arangala",
+      "run_name": "Leecom"
+    },
+    {
+      "stationId": "curw_ws_urumewalla",
+      "name": "Urumewalla",
+      "station_meta": ["curw_ws_urumewalla", "Urumewalla", 7.079360, 80.348666, 0, "Leecom station, Urumewalla General School"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, Urumewalla General School",
+      "run_name": "Leecom"
+    }, 
+    {
+      "stationId": "curw_ws_mahapallegama",
+      "name": "Mahapallegama",
+      "station_meta": ["curw_ws_mahapallegama", "Mahapallegama", 7.16704, 80.26146, 0, "Leecom station, Senanayake Maha Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, Senanayake Maha Vidyalaya",
       "run_name": "Leecom"
     }
   ],
