--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -342,6 +342,32 @@
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Senanayake Maha Vidyalaya",
       "run_name": "Leecom"
+    },
+    {
+      "stationId": "curw_ws_boralasgamuwa",
+      "name": "Boralasgamuwa",
+      "station_meta": ["curw_ws_boralasgamuwa", "Boralasgamuwa", 6.8403, 79.91629, 0, "Leecom station, Chandrarathna Manawasinghe Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, Chandrarathna Manawasinghe Vidyalaya",
+      "run_name": "Leecom"
+    },
+    {
+      "stationId": "curw_ws_kittampahuwa",
+      "name": "Kittampahuwa",
+      "station_meta": ["curw_ws_kittampahuwa", "Kittampahuwa", 6.95285, 79.89048, 0, "Leecom station, Kotuwila Gamini Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, Kotuwila Gamini Vidyalaya",
+      "run_name": "Leecom"
     }
   ],
   "water_level_stations": [
