Leecom Jaffna station added/Higurana Leecom changed to Hingurana

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -170,8 +170,8 @@
     },
     {
       "stationId": "curw_hingurana",
-      "name": "Hingurana",
-      "station_meta": ["curw_hingurana", "Hingurana", 6.904552, 80.407895, 0, "Hingurana Station"],
+      "name": "Hingurana Study",
+      "station_meta": ["curw_hingurana", "Hingurana Study", 6.904552, 80.407895, 0, "Hingurana Station"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Temperature", "WindSpeed", "WindGust", "WindDirection", "Humidity", "SolarRadiation"],
@@ -419,6 +419,19 @@
       "max_values": ["120", "40", "30", "360", "100", "1"],
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Saman Eliya Maha Vidyalaya",
+      "run_name": "Leecom"
+    },
+    {
+      "stationId": "curw_ws_jaffna",
+      "name": "Jaffna",
+      "station_meta": ["curw_ws_jaffna", "Jaffna", 9.661416, 80.029467, 0, "Leecom station, District Secretrait - Jaffna"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, District Secretrait - Jaffna",
       "run_name": "Leecom"
     }
   ],
