new Max n Min value for waterlevel was attached and water filter part of script was changed

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -461,7 +461,9 @@
       "min_values": ["0"],
       "description": "Leecom water level guage, testing station",
       "run_name": "Leecom",
-      "mean_sea_level": 2.981
+      "mean_sea_level": 2.981,
+      "min_wl": -1.000,
+      "max_wl": 3.000
     },
     {
       "stationId": "curw_wl_diyasaru_uyana",
@@ -475,7 +477,9 @@
       "min_values": ["0"],
       "description": "Yantai water level guage, A&T communication",
       "run_name": "A&T Labs",
-      "mean_sea_level": 2.896
+      "mean_sea_level": 2.896,
+      "min_wl": -1.000,
+      "max_wl": 3.000
 
     },
     {
@@ -490,7 +494,9 @@
       "min_values": ["0"],
       "description": "Leecom water level guage, Leecom communication box",
       "run_name": "Leecom",
-      "mean_sea_level": 6.716
+      "mean_sea_level": 6.716,
+      "min_wl": -1.000,
+      "max_wl": 3.000
     },
     {
       "stationId": "curw_wl_ingurukade",
@@ -504,7 +510,9 @@
       "min_values": ["0"],
       "description": "Leecom water level guage, Leecom communication box",
       "run_name": "Leecom",
-      "mean_sea_level": 6.975
+      "mean_sea_level": 6.975,
+      "min_wl": -1.000,
+      "max_wl": 3.000
     },
     {
       "stationId": "curw_wl_yakbedda",
@@ -518,7 +526,9 @@
       "min_values": ["0"],
       "description": "Leecom water level guage, Leecom communication box",
       "run_name": "Leecom",
-      "mean_sea_level": 6.005
+      "mean_sea_level": 6.005,
+      "min_wl": -1.000,
+      "max_wl": 3.000
     },
     {
       "stationId": "curw_wl_wellampitiya",
@@ -532,7 +542,9 @@
       "min_values": ["0"],
       "description": "Leecom water level guage, Leecom communication box",
       "run_name": "Leecom",
-      "mean_sea_level": 7.965
+      "mean_sea_level": 7.965,
+      "min_wl": -1.000,
+      "max_wl": 3.000
     },
     {
       "stationId": "curw_wl_wellawatta",
@@ -546,7 +558,9 @@
       "min_values": ["0"],
       "description": "Leecom water level guage, Leecom communication box",
       "run_name": "Leecom",
-      "mean_sea_level": 6.922
+      "mean_sea_level": 6.922,
+      "min_wl": -1.000,
+      "max_wl": 3.000
     },
     {
       "stationId": "curw_wl_kitulgala",
@@ -560,7 +574,9 @@
       "min_values": ["0"],
       "description": "Yantai water level guage, A&T communication",
       "run_name": "A&T Labs",
-      "mean_sea_level": 12.586
+      "mean_sea_level": 12.586,
+      "min_wl": 50.000,
+      "max_wl": 60.000
     },
     {
       "stationId": "curw_wl_ranwala",
@@ -574,7 +590,9 @@
       "min_values": ["0"],
       "description": "Campbell water level guage, A&T communication",
       "run_name": "A&T Labs",
-      "mean_sea_level": 16.872
+      "mean_sea_level": 16.872,
+      "min_wl": 5.000,
+      "max_wl": 10.000
     },
     {
       "stationId": "curw_wl_mattakkuliya",
@@ -588,7 +606,9 @@
       "min_values": ["0"],
       "description": "Yantai water level guage, A&T communication",
       "run_name": "A&T Labs",
-      "mean_sea_level": 7.057
+      "mean_sea_level": 7.057,
+      "min_wl": -2.000,
+      "max_wl": 3.000
     },
     {
       "stationId": "curw_wl_kaduwela",
@@ -602,7 +622,10 @@
       "min_values": ["0"],
       "description": "Campbell water level guage, A&T communication",
       "run_name": "A&T Labs",
-      "mean_sea_level": 11.540
+      "mean_sea_level": 11.540,
+      "min_wl": -1.000,
+      "max_wl": 5.000
+
     }
   ]
 }
