--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -446,6 +446,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Dhammahadaya Vivek Senasuna Naula",
       "run_name": "Leecom"
+    },
+    {
+      "stationId": "curw_ws_hingurana",
+      "name": "Hingurana",
+      "station_meta": ["curw_ws_hingurana", "Hingurana", 6.90455, 80.40789, 0, "Leecom station with their own Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Hingurana Kanishta Vidyalaya",
+      "run_name": "Leecom"
     }
   ],
   "water_level_stations": [
