--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -453,10 +453,10 @@
       "station_meta": ["curw_ws_hingurana", "Hingurana", 6.90455, 80.40789, 0, "Leecom station with their own Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
-      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
-      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Hingurana Kanishta Vidyalaya",
       "run_name": "Leecom"
     }
