LeeCom Attidiya and Kaduwela weather stations were added

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -472,6 +472,32 @@
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Dehiowita National College",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_attidiya",
+      "name": "Attidiya",
+      "station_meta": ["curw_ws_attidiya", "Attidiya", 6.84564, 79.88467, 0, "Leecom station with their own Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Attidiya",
+      "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_kaduwela",
+      "name": "Kaduwela",
+      "station_meta": ["curw_ws_kaduwela", "Kaduwela", 6.93151, 79.97572, 0, "Leecom station with their own Rain Gauge"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-""],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Kaduwela",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
