Leecom Thalawathugoda weather station was added

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -498,6 +498,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Kaduwela",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_thalawathugoda",
+      "name": "Thalawathugoda",
+      "station_meta": ["curw_ws_thalawathugoda", "Thalawathugoda", 6.87363, 79.95041, 0, "Leecom station, Vidura College"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, Vidura College",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
