--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -406,7 +406,20 @@
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Vidura College",
       "run_name": "Leecom"
-     }
+     },
+     {
+      "stationId": "curw_ws_colombo07",
+      "name": "Colombo07",
+      "station_meta": ["curw_ws_colombo07", "Colombo07", 6.90496, 79.86003, 0, "Leecom station, Thurstan College"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, Thurstan College",
+      "run_name": "Leecom"
+    }
   ],
   "water_level_stations": [
     {
