--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -555,6 +555,22 @@
       "max_wl": 12.000
     },
     {
+      "stationId": "curw_wl_ranwala_2",
+      "name": "Ranwala Bridge 2",
+      "station_meta": ["curw_wl_ranwala_2", "Ranwala Bridge 2", 6.970684, 80.165117, 0, "Yantai water level guage, Leecom station"],
+      "source": "WaterLevelGuage",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Yantai water level guage, LeeCom station",
+      "run_name": "Leecom",
+      "mean_sea_level": 17.702,
+      "min_wl": 5.000,
+      "max_wl": 12.000
+    },
+    {
       "stationId": "curw_wl_kaduwela",
       "name": "Kaduwela Bridge",
       "station_meta": ["curw_wl_kaduwela", "Kaduwela Bridge", 6.936431, 79.985192, 0, "Campbell water level guage, A&T communication box"],
