Leecom station at Mulleriyawa station was added

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -419,7 +419,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0"],
       "description": "Leecom station, Thurstan College",
       "run_name": "Leecom"
-    }
+    },{
+      "stationId": "curw_ws_mulleriyawa",
+      "name": "Mulleriyawa",
+      "station_meta": ["curw_ws_mulleriyawa", "Mulleriyawa", 6.92360, 79.94115, 0, "Leecom station, Ediriweera Sarachchandra Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-"],
+      "max_values": ["120", "40", "30", "360", "100", "1"],
+      "min_values": ["0", "0", "0", "0", "0", "0"],
+      "description": "Leecom station, Ediriweera Sarachchandra Vidyalaya",
+      "run_name": "Leecom"
+     }
   ],
   "water_level_stations": [
     {
