--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -495,6 +495,18 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Helena Wijewardhana Balika Vidyalaya",
       "run_name": "Leecom"
+     },{
+      "stationId": "curw_ws_nugegoda",
+      "name": "Nugegoda",
+      "station_meta": ["curw_ws_nugegoda", "Nugegoda", 6.872222, 79.888, 0, "Leecom station, Anula Vidyalaya Primary School"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Anula Vidyalaya Primary School",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
