--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -507,6 +507,32 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Boys School Malabe",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_padukka",
+      "name": "Padukka",
+      "station_meta": ["curw_ws_padukka", "Padukka", 6.839353, 80.088531, 0, "Leecom station, Siri Piyarathana Central College"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Siri Piyarathana Central College",
+      "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_narahenpita",
+      "name": "Narahenpita",
+      "station_meta": ["curw_ws_narahenpita", "Narahenpita", 6.901326, 79.882832, 0, "Leecom station, RTC Office Kirimandala mawatha"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, RTC Office Kirimandala mawatha",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
