--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -533,6 +533,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, RTC Office Kirimandala mawatha",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_orugodawatta",
+      "name": "Orugodawatta",
+      "station_meta": ["curw_ws_orugodawatta", "Orugodawatta", 6.901326, 79.882832, 0, "Leecom station, SLLRDC sub office"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, SLLRDC sub office",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
