--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -598,6 +598,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Rajasinghe National School",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_panawela",
+      "name": "Panawela",
+      "station_meta": ["curw_ws_panawela", "Panawela", 6.892567, 80.273882, 0, "Leecom station, Ranjan Wijerathna Maha Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Ranjan Wijerathna Maha Vidyalaya",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
