--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -624,6 +624,32 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Kotiyagal Estate Factory",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_papiliyawala",
+      "name": "Papiliyawala",
+      "station_meta": ["curw_ws_papiliyawala", "Papiliyawala", 6.997788, 80.127702, 0, "Leecom station, Papiliyawala Kanishta Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Papiliyawala Kanishta Vidyalaya",
+      "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_wattala",
+      "name": "Wattala",
+      "station_meta": ["curw_ws_wattala", "Wattala", 6.98678, 79.87102, 0, "Leecom station, Don Bosco College"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Don Bosco College",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
