--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -650,6 +650,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Don Bosco College",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_mawaramandiya",
+      "name": "Mawaramandiya",
+      "station_meta": ["curw_ws_mawaramandiya", "Mawaramandiya", 7.0413337, 80.2559749, 0, "Leecom station, SKK Suriarachchi Maha Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, SKK Suriarachchi Maha Vidyalaya",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
