--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -53,8 +53,8 @@
     },
     {
       "stationId": "curw_dickoya",
-      "name": "Dickoya",
-      "station_meta": ["curw_dickoya", "Dickoya", 6.8722 , 80.60312 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
+      "name": "Dickoya Study",
+      "station_meta": ["curw_dickoya", "Dickoya Study", 6.8722 , 80.60312 , 0, "A&T Communication Box, Texas Standard Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Tick"],
@@ -662,6 +662,19 @@
       "max_values": ["120", "40", "30", "360", "100", "1", "900"],
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, SKK Suriarachchi Maha Vidyalaya",
+      "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_dickoya",
+      "name": "Dickoya",
+      "station_meta": ["curw_ws_dickoya", "Dickoya", 6.872179, 80.603133, 0, "Leecom station, Dickoya Sinhala School"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Dickoya Sinhala School",
       "run_name": "Leecom"
      }
   ],
