--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -626,19 +626,6 @@
       "run_name": "Leecom"
      },
      {
-      "stationId": "curw_ws_wattala",
-      "name": "Wattala",
-      "station_meta": ["curw_ws_wattala", "Wattala", 6.98678, 79.87102, 0, "Leecom station, Don Bosco College"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
-      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
-      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
-      "description": "Leecom station, Don Bosco College",
-      "run_name": "Leecom"
-     },
-     {
       "stationId": "curw_ws_mawaramandiya",
       "name": "Mawaramandiya",
       "station_meta": ["curw_ws_mawaramandiya", "Mawaramandiya", 7.0413337, 80.2559749, 0, "Leecom station, SKK Suriarachchi Maha Vidyalaya"],
@@ -662,6 +649,30 @@
       "max_values": ["120", "40", "30", "360", "100", "1", "900"],
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Dickoya Sinhala School",
+      "run_name": "Leecom"
+     },{
+      "stationId": "curw_ws_maskeliya",
+      "name": "Maskeliya",
+      "station_meta": ["curw_ws_maskeliya", "Maskeliya", 6.82955, 80.57551, 0, "Leecom station, Saman Eliya Maha Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Saman Eliya Maha Vidyalaya",
+      "run_name": "Leecom"
+    },{
+      "stationId": "curw_ws_wattala",
+      "name": "Wattala",
+      "station_meta": ["curw_ws_wattala", "Wattala", 6.98678, 79.87102, 0, "Leecom station, Don Bosco College"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Don Bosco College",
       "run_name": "Leecom"
      }
   ],
