--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -656,10 +656,10 @@
       "station_meta": ["curw_ws_maskeliya", "Maskeliya", 6.82955, 80.57551, 0, "Leecom station, Saman Eliya Maha Vidyalaya"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
-      "units": ["oC", "m/s", "degrees", "%", "-", "mmHg"],
-      "max_values": ["40", "30", "360", "100", "1", "900"],
-      "min_values": ["0", "0", "0", "0", "0", "600"],
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Saman Eliya Maha Vidyalaya",
       "run_name": "Leecom"
     },{
