--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -44,10 +44,10 @@
       "station_meta": ["curw_kotikawatta", "Kotikawatta", 6.93494, 79.915356, 0, "Leecom station with their own Rain Gauge"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
-      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
-      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "variables": ["Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "600"],
       "description": "Kotikawatta",
       "run_name": "Leecom"
     },
