--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -574,19 +574,6 @@
       "run_name": "Leecom"
      },
      {
-      "stationId": "curw_ws_ruwanwella",
-      "name": "Ruwanwella",
-      "station_meta": ["curw_ws_ruwanwella", "Ruwanwella", 6.997939, 79.986863, 0, "Leecom station, Rajasinghe National School"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
-      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
-      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
-      "description": "Leecom station, Rajasinghe National School",
-      "run_name": "Leecom"
-     },
-     {
       "stationId": "curw_ws_panawela",
       "name": "Panawela",
       "station_meta": ["curw_ws_panawela", "Panawela", 6.892567, 80.273882, 0, "Leecom station, Ranjan Wijerathna Maha Vidyalaya"],
@@ -626,19 +613,6 @@
       "run_name": "Leecom"
      },
      {
-      "stationId": "curw_ws_mawaramandiya",
-      "name": "Mawaramandiya",
-      "station_meta": ["curw_ws_mawaramandiya", "Mawaramandiya", 7.0413337, 80.2559749, 0, "Leecom station, SKK Suriarachchi Maha Vidyalaya"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
-      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
-      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
-      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
-      "description": "Leecom station, SKK Suriarachchi Maha Vidyalaya",
-      "run_name": "Leecom"
-     },
-     {
       "stationId": "curw_ws_dickoya",
       "name": "Dickoya",
       "station_meta": ["curw_ws_dickoya", "Dickoya", 6.872179, 80.603133, 0, "Leecom station, Dickoya Sinhala School"],
@@ -673,6 +647,32 @@
       "max_values": ["40", "30", "360", "100", "1", "900"],
       "min_values": ["0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Don Bosco College",
+      "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_ruwanwella",
+      "name": "Ruwanwella",
+      "station_meta": ["curw_ws_ruwanwella", "Ruwanwella", 7.041334, 80.255975, 0, "Leecom station, Rajasinghe National School"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Rajasinghe National School",
+      "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_mawaramandiya",
+      "name": "Mawaramandiya",
+      "station_meta": ["curw_ws_mawaramandiya", "Mawaramandiya", 6.997939, 79.986863, 0, "Leecom station, SKK Suriarachchi Maha Vidyalaya"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, SKK Suriarachchi Maha Vidyalaya",
       "run_name": "Leecom"
      }
   ],
