--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -358,27 +358,27 @@
      {
       "stationId": "curw_ws_attidiya",
       "name": "Attidiya",
-      "station_meta": ["curw_ws_attidiya", "Attidiya", 6.84564, 79.88467, 0, "Leecom station with their own Rain Gauge"],
+      "station_meta": ["curw_ws_attidiya", "Attidiya", 6.84564, 79.88467, 0, "Leecom station, Attidiya"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
       "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
       "max_values": ["120", "40", "30", "360", "100", "1", "900"],
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
-      "description": "Attidiya",
+      "description": "Leecom station, Attidiya",
       "run_name": "Leecom"
      },
      {
       "stationId": "curw_ws_kaduwela",
       "name": "Kaduwela",
-      "station_meta": ["curw_ws_kaduwela", "Kaduwela", 6.93151, 79.97572, 0, "Leecom station with their own Rain Gauge"],
+      "station_meta": ["curw_ws_kaduwela", "Kaduwela", 6.93151, 79.97572, 0, "Leecom station, Kaduwela"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
       "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
       "max_values": ["120", "40", "30", "360", "100", "1", "900"],
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
-      "description": "Kaduwela",
+      "description": "Leecom station, Kaduwela",
       "run_name": "Leecom"
      },
      {
