--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -332,14 +332,14 @@
     {
       "stationId": "curw_ws_hingurana",
       "name": "Hingurana",
-      "station_meta": ["curw_ws_hingurana", "Hingurana", 6.90455, 80.40789, 0, "Leecom station with their own Rain Gauge"],
+      "station_meta": ["curw_ws_hingurana", "Hingurana", 6.90455, 80.40789, 0, "Leecom station, Hingurana Kanishta Vidyalaya"],
       "source": "WeatherStation",
       "type": "Observed",
       "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
       "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
       "max_values": ["120", "40", "30", "360", "100", "1", "900"],
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
-      "description": "Hingurana Kanishta Vidyalaya",
+      "description": "Leecom station, Hingurana Kanishta Vidyalaya",
       "run_name": "Leecom"
     },
     {
@@ -677,22 +677,7 @@
      }
   ],
   "water_level_stations": [
-    {
-      "stationId": "curw_wl_test",
-      "name": "Leecom WL Guage",
-      "station_meta": ["curw_wl_test", "Leecom WL Guage", 6.879243, 79.929304, 0, "Leecom water level guage, testing station"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Waterlevel"],
-      "units": ["m"],
-      "max_values": ["30"],
-      "min_values": ["0"],
-      "description": "Leecom water level guage, testing station",
-      "run_name": "Leecom",
-      "mean_sea_level": 2.981,
-      "min_wl": -1.000,
-      "max_wl": 3.000
-    },
+
     {
       "stationId": "curw_wl_diyasaru_uyana",
       "name": "Diyasaru Uyana",
