Hingurana Study removed, diyasaru wl added to report the virtual station at Nagalagam

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -78,21 +78,6 @@
       "run_name": "A&T Labs"
     },
     {
-      "stationId": "curw_hingurana",
-      "name": "Hingurana Study",
-      "station_meta": ["curw_hingurana", "Hingurana Study", 6.904552, 80.407895, 0, "Hingurana Station"],
-      "source": "WeatherStation",
-      "type": "Observed",
-      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindGust", "WindDirection", "Humidity", "SolarRadiation"],
-      "units": ["mm", "oC", "m/s", "m/s", "degrees", "%", "W/m2"],
-      "max_values": ["120", "40", "30", "30", "360", "100", "1413"],
-      "min_values": ["0", "0", "0", "0", "0", "0", "0"],
-      "description": "HINGURANA STATION",
-      "run_name": "CUrW IoT",
-      "wunderground": {"stationId": "IKEGALLE2", "password": "xt0eouz2"},
-      "dialog": {"stationId": "Hingurana", "password": "3674010756837033"}
-    },
-    {
       "stationId": "curw_uduwawala",
       "station_alias": "IKANDY2",
       "name": "Uduwawala",
@@ -677,6 +662,22 @@
      }
   ],
   "water_level_stations": [
+    {
+      "stationId": "curw_wl_test",
+      "name": "Leecom WL Guage",
+      "station_meta": ["curw_wl_test", "Leecom WL Guage", 6.879243, 79.929304, 0, "Leecom water level guage, testing station"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Leecom water level guage, testing station",
+      "run_name": "Leecom",
+      "mean_sea_level": 2.981,
+      "min_wl": -1.000,
+      "max_wl": 3.000
+    },
 
     {
       "stationId": "curw_wl_diyasaru_uyana",
