--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -627,10 +627,10 @@
       "station_meta": ["curw_ws_wattala", "Wattala", 6.98678, 79.87102, 0, "Leecom station, Don Bosco College"],
       "source": "WeatherStation",
       "type": "Observed",
-      "variables": ["Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
-      "units": ["oC", "m/s", "degrees", "%", "-", "mmHg"],
-      "max_values": ["40", "30", "360", "100", "1", "900"],
-      "min_values": ["0", "0", "0", "0", "0", "600"],
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Don Bosco College",
       "run_name": "Leecom"
      },
