Nagalagama station was added back

--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -662,6 +662,23 @@
      }
   ],
   "water_level_stations": [
+
+    {
+      "stationId": "curw_wl_test",
+      "name": "Leecom WL Guage",
+      "station_meta": ["curw_wl_test", "Leecom WL Guage", 6.879243, 79.929304, 0, "Leecom water level guage, testing station"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Waterlevel"],
+      "units": ["m"],
+      "max_values": ["30"],
+      "min_values": ["0"],
+      "description": "Leecom water level guage, testing station",
+      "run_name": "Leecom",
+      "mean_sea_level": 2.981,
+      "min_wl": -1.000,
+      "max_wl": 3.000
+    },
     {
       "stationId": "curw_wl_diyasaru_uyana",
       "name": "Diyasaru Uyana",
