--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -620,6 +620,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, SKK Suriarachchi Maha Vidyalaya",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_passara",
+      "name": "Passara",
+      "station_meta": ["curw_ws_passara", "Passara", 6.941714, 81.192094, 0, "Leecom station, Aruna Tea Factory"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station,  Aruna Tea Factory",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
