--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -633,6 +633,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station,  Aruna Tea Factory",
       "run_name": "Leecom"
+     }, 
+     {
+      "stationId": "curw_ws_oluvil",
+      "name": "Oluvil",
+      "station_meta": ["curw_ws_oluvil", "Oluvil", 7.299161, 81.854518, 0, "Leecom station, South Eastern University of Sri Lanka"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, South Eastern University of Sri Lanka",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
