--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -646,6 +646,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, South Eastern University of Sri Lanka",
       "run_name": "Leecom"
+     }, 
+     {
+      "stationId": "curw_ws_buttala",
+      "name": "Buttala",
+      "station_meta": ["curw_ws_buttala", "Buttala", 6.720873, 81.206913, 0, "Leecom station, Pelwatte Sugar Cane factory premises, Buttala"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Pelwatte Sugar Cane factory premises, Buttala",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
