--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -659,6 +659,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Pelwatte Sugar Cane factory premises, Buttala",
       "run_name": "Leecom"
+     }, 
+     {
+      "stationId": "curw_ws_galle",
+      "name": "Galle",
+      "station_meta": ["curw_ws_galle", "Galle", 6.079006, 80.192081, 0, "Leecom station, Ruhuna University"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, Ruhuna University",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
