--- a/CONFIG.dist.json
+++ b/CONFIG.dist.json
@@ -672,6 +672,19 @@
       "min_values": ["0", "0", "0", "0", "0", "0", "600"],
       "description": "Leecom station, Ruhuna University",
       "run_name": "Leecom"
+     },
+     {
+      "stationId": "curw_ws_kantale",
+      "name": "Kantale",
+      "station_meta": ["curw_ws_kantale", "Kantale", 8.363110, 81.004937, 0, "Leecom station, CECB base office"],
+      "source": "WeatherStation",
+      "type": "Observed",
+      "variables": ["Precipitation", "Temperature", "WindSpeed", "WindDirection", "Humidity", "Tick", "Pressure"],
+      "units": ["mm", "oC", "m/s", "degrees", "%", "-", "mmHg"],
+      "max_values": ["120", "40", "30", "360", "100", "1", "900"],
+      "min_values": ["0", "0", "0", "0", "0", "0", "600"],
+      "description": "Leecom station, CECB base office",
+      "run_name": "Leecom"
      }
   ],
   "water_level_stations": [
